# Routes/index.js
@@ -10,6 +10,8 @@ const customerRoutes = require('./customerRoutes');
 const billRoutes = require('./billRoutes');
 const serviceRoutes = require('./serviceRoutes');
 const taskRoutes = require('./taskRoutes');
+const complaintRoutes = require('./complaintRoutes');
+const reminderRoutes = require('./reminderRoutes');
 
 // Register all routes with their respective paths
 Router.use('/admin', loginRoutes);
@@ -18,6 +20,8 @@ Router.use('/api/customer', customerRoutes);
 Router.use('/api/bill', billRoutes);
 Router.use('/api/service', serviceRoutes);
 Router.use('/api/task', taskRoutes);
+Router.use('/api/complaint', complaintRoutes);
+Router.use('/api/reminder', reminderRoutes);
 // Router.use('/api/otp', otpRoutes);
 // Router.use('/api/notification', notificationRoutes);
 
